# reqtrace-py

./: .gitignore  README.md  pyproject.toml
examples/: fastapi_example.py
src/reqtrace/: __init__.py  cli.py  config.py  differ.py  formatter.py  middleware.py  writer.py
src/reqtrace/viewer/: server.py
src/reqtrace/viewer/static/: index.html
tests/: test_reqtrace.py
